# data-flow-analysis

./: README.md  data-flow-analysis.cabal
app/: Main.hs  Parsing.hs
src/: AST.hs  CFG.hs  ConstantPropagation.hs  LiveVariable.hs  MonotoneFramework.hs  Semantics.hs  Variables.hs
